@@ -1,5 +1,7 @@
 package net.ripe.db.whois.api.nrtmv4;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import jakarta.ws.rs.NotAllowedException;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.xml.bind.DatatypeConverter;
@@ -8,7 +10,11 @@ import net.ripe.db.nrtm4.domain.NrtmKeyRecord;
 import net.ripe.db.nrtm4.domain.UpdateNotificationFile;
 import net.ripe.db.nrtm4.util.ByteArrayUtil;
 import net.ripe.db.whois.api.AbstractNrtmIntegrationTest;
+import net.ripe.db.whois.api.rdap.domain.Entity;
 import net.ripe.db.whois.common.rpsl.RpslObject;
+import org.eclipse.jetty.http.HttpHeader;
+import org.eclipse.jetty.http.HttpScheme;
+import org.eclipse.jetty.http.HttpStatus;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.test.annotation.DirtiesContext;
@@ -28,6 +34,7 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @Tag("IntegrationTest")
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
@@ -96,6 +103,7 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
         setTime(LocalDateTime.now());
 
         nrtmKeyPairService.generateKeyRecord(false);
+        addPublicKeyinPemFormat(nrtmKeyPairService.getNextkeyPair().id());
 
         updateNotificationFileGenerator.generateFile();
 
@@ -115,6 +123,7 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
         setTime(LocalDateTime.now().plusHours(1));
 
         nrtmKeyPairService.generateKeyRecord(false);
+        addPublicKeyinPemFormat(nrtmKeyPairService.getNextkeyPair().id());
 
         updateNotificationFileGenerator.generateFile();
 
@@ -152,7 +161,7 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
     }
 
     @Test
-    public void should_create_file_with_latest_delta_older_snapshot_version()  {
+    public void should_create_file_with_latest_delta_older_snapshot_version() throws ParseException, JsonProcessingException {
         final RpslObject rpslObject = RpslObject.parse("" +
                 "inet6num:       ::/0\n" +
                 "netname:        IANA-BLK\n" +
@@ -253,8 +262,8 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
         final UpdateNotificationFile firstIteration = getNotificationFileBySource("TEST");
 
         assertThat(firstIteration.getDeltas().size(), is(1));
-        assertThat(firstIteration.getDeltas().get(0).getUrl(), containsString("https"));
-        assertThat(firstIteration.getSnapshot().getUrl(), containsString("https"));
+        assertThat(firstIteration.getDeltas().getFirst().getUrl(), containsString("nrtm-delta"));
+        assertThat(firstIteration.getSnapshot().getUrl(), containsString("nrtm-snapshot"));
     }
 
     @Test
@@ -318,7 +327,7 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
 
     @Test
     public void should_throw_exception_invalid_source_notification_file()  {
-        final Response response = getResponseFromHttpsRequest("TEST/update-notification-file.json",
+        final Response response = getResponseFromHttpsRequest("TEST/update-notification-file.jose",
                 MediaType.APPLICATION_JSON);
         assertThat(response.getStatus(), is(400));
         assertThat(response.readEntity(String.class), is("Invalid source"));
@@ -327,12 +336,24 @@ public class UpdateNotificationFileGenerationTestIntegration extends AbstractNrt
     @Test
     public void should_throw_exception_notification_file_not_found() {
         createNrtmSource();
-        final Response response = getResponseFromHttpsRequest("TEST/update-notification-file.json",
+        final Response response = getResponseFromHttpsRequest("TEST/update-notification-file.jose",
                 MediaType.APPLICATION_JSON);
 
         assertThat(response.getStatus(), is(404));
-        assertThat(response.readEntity(String.class), is("update-notification-file.json does not exists for source TEST"));
+        assertThat(response.readEntity(String.class), is("update-notification-file does not exists for source TEST"));
     }
+
+    @Test
+    public void should_throw_405_when_method_does_not_exist() {
+        final Response response = getWebTarget("?infvt=kefne")
+                    .request(MediaType.APPLICATION_JSON)
+                    .header(HttpHeader.X_FORWARDED_PROTO.asString(), HttpScheme.HTTPS.asString())
+                    .post(jakarta.ws.rs.client.Entity.entity("", MediaType.APPLICATION_JSON));
+
+        assertThat(response.getStatus(), is(HttpStatus.METHOD_NOT_ALLOWED_405));
+    }
+
+    /* Helper */
     private boolean isValidDateFormat(final String date){
         final DateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
         sdf.setLenient(false);
